--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -35,8 +35,8 @@
         <section id="contact">
             <h2>Contact</h2>
             <form action="#" method="post">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required><br><br>
+                <!-- label for="name">Name:</label> -->
+                <!-- <input type="text" id="name" name="name" required><br><br> -->
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required><br><br>
                 <label for="message">Message:</label><br>
